scroll bar and overflow fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,10 +15,12 @@
 /* For Chrome, Safari, and Opera */
 ::-webkit-scrollbar {
   width: 8px; /* Set the width of the scrollbar */
+  /* margin: 4px 0; Add margin on top and bottom */
 }
 
 ::-webkit-scrollbar-track {
   background-color: #f1f1f1; /* Set the color of the scrollbar track */
+  margin: 8px 1px; /* Add margin on top and bottom */
 }
 
 ::-webkit-scrollbar-thumb {
